Fix some layout issues.

--- a/app/assets/stylesheets/activities.css.sass
+++ b/app/assets/stylesheets/activities.css.sass
@@ -82,6 +82,8 @@ body.activities.search
     font-size: 1.5em
 
 body.activities.show
+  .content
+    padding-top: 1.5em
   .activity_name, .activity_info
     +grid(8)
   .activity_price, .activity_reviews
@@ -235,7 +237,7 @@ section.search
   padding-top: 2em
   padding-bottom: 2em
   margin-bottom: 1em 
-  margin-top: -3em
+  margin-top: -1em
   text-align: center
   p
     font-size: 1.5em
